# mental-mastery

./: .gitattributes  .gitignore  README.md  app-architecture.md  assessment-tools.md  onboarding-guide.md  progression-model.md  pubspec.yaml  references.bib  research-grounding.md  scientific-foundation.md  white_paper.tex
android/app/: CMakeLists.txt  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: whisper_bridge.cpp
android/app/src/main/kotlin/com/mentalmastery/mental_mastery/: GenAiCapabilityPlugin.kt  MainActivity.kt
assets/docs/: assessment-tools.md  progression-model.md  quick-reference.md  research-grounding.md  scientific-foundation.md  skill-taxonomy.md  training-curriculum.md
docs/: app-design.md  onboarding-guide.md  quick-reference.md  review-raw.md  skill-taxonomy.md  training-curriculum.md
lib/: app.dart  main.dart
lib/content/assessments/: all_assessments.dart  assessment_model.dart  questionnaire_definitions.dart
lib/content/gates/: all_gates.dart  gate_model.dart
lib/content/phases/: all_phases.dart  phase_model.dart
lib/content/practices/: all_practices.dart  practice_model.dart
lib/content/templates/: all_templates.dart  template_model.dart
lib/core/: navigation_key.dart  providers.dart
lib/core/database/: app_database.dart  app_database.g.dart  drift_provider.dart
lib/core/router/: router.dart
lib/core/theme/: app_theme.dart  tokens.dart
lib/core/widgets/: arousal_slider.dart  library_panel.dart  markdown_viewer.dart  phase_badge.dart  safety_card.dart  voice_input_field.dart
(+88 files in other folders)
